--- a/index.html
+++ b/index.html
@@ -1,6 +1,72 @@
 <html>
-<head></head>
+<head>
+  <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+
+</head>
 <body>
-Towl Bowl
+
+<!--
+  <div id="navbar_row">
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <img src="Toll_Brothers.png"/>
+          <a class="navbar-brand" href="#"></a>
+        </div>
+      </div>
+    </div>
+  </div>
+-->
+<div class="row">
+  <div class="col-md-12">
+  <form>
+  <div class="table-responsive">
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Date</th>
+          <th>Time</th>
+          <th>Favorite</th>
+          <th>Underdog</th>
+          <th>Spread</th>
+          <th>Points</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Rose Bowl</td>
+          <td>1/1/15</td>
+          <td>1:00pm</td>
+          <td><button type="button" class="btn btn-primary">Oregon</button></td>
+          <td><button type="button" class="btn btn-default">Florida State</button></td>
+          <td>+7.5</td>
+          <td><input type="text" class="form-control" id="point_total" placeholder="1-29"></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="form-group">
+    <label for="exampleInputPassword1">Name</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Name">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+  </div>
+
+
+</form>
+</div>
+</div>
+
+
+<div class="row">
+  <div class="col-md-12">
+<button type="button" class="btn btn-primary btn-lg">Submit</button>
+<button type="button" class="btn btn-primary btn-lg">Reset</button>
+</div>
+</div>
 </body>
 </html>
